fix limit issues,fuzziness issue, flex wrap issue

--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -159,6 +159,7 @@
 
 .search__fuzzysearch-results-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 15px;
   color: var(--primary-red);
   font-weight: 700;
